# taiko-score-getter-rs

./: Cargo.toml  MACOS.md  README.md  build.rs
src/: gui.rs  main.rs  os.rs  songs_score.rs
src/gui/: macos.rs  noop.rs  windows.rs
src/os/: macos.rs  windows.rs
