[package]
name = "taiko-score-getter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["rt-multi-thread", "full"] }
hudsucker = { version = "0.23", features = ["native-tls-client"] }
hyper-tls = "*"
time = "*"
dirs = "6.0.0"
http = "*"
http-body-util = "0.1.2"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
sysproxy = "0.3.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winsafe = { version = "0.0.22", features = ["gui"] }
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"
ico-builder = "0.1.1"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
